Add image on index.html. Add 2 new strings to const list in JS

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,14 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <h1>Anthony's Portfolio</h1>
       <p>This is my portfolio.</p>
+      <img src="/images/me.jpg" width=50%/>
+      <p>I am a fullstack engineer studying at the University at Buffalo (SUNY). I have developed several websites, created Python applications, and created an Android App in my time as a student!</p>
+      <p>Connect with me on <a href="https://www.linkedin.com/in/anthony00">LinkedIn</a></p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
