--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,6 +17,9 @@
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
+
+      <button onclick="showtime()">Click here</button>
+      <div id="showtime-container"></div>
     </div>
   </body>
 </html>
